--- a/public/views/body/addCoin.html
+++ b/public/views/body/addCoin.html
@@ -187,7 +187,7 @@
       <label>구매가</label>
     </div>
     <div class="group">
-      <input name="quantity" type="number" required="required" /><span class="highlight"></span><span class="bar"></span>
+      <input name="quantity" type="number" step="0.0000001" required="required" /><span class="highlight"></span><span class="bar"></span>
       <label>보유수량</label>
     </div>
     <div class="group">
