--- a/public/views/body/container.html
+++ b/public/views/body/container.html
@@ -1,2 +1,4 @@
 <h2 style="text-align:center;">Do it JohnBer</h2>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+<p>1. 별일이 없으면 2018-12-28(금)까지 존버후 매도한다</p>
+<p>2. 목표가에 근접하면 비상 대책회의를 통해 유지를 결정한다.</p>
+<p>3. 손절은 없다.</p>
