--- a/public/views/body/coinListRow.html
+++ b/public/views/body/coinListRow.html
@@ -1,7 +1,7 @@
 <td><%= coin %></td>
 <td class="dr-only"><%= price %></td>
 <td class="dr-only"><%= quantity %></td>
-<td class="dr-only"><%= buyPrice.toFixed(4) %></td>
+<td class="dr-only"><%= buyPrice %></td>
 <td class="dr-only"><%= buyDate %></td>
 <td class="dr-only"><%= goal %></td>
 <td class="current dr-only"></td>
